--- a/api/translation/models/translation.settings.json
+++ b/api/translation/models/translation.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "lesson_plans",
+  "collectionName": "translations",
   "info": {
-    "name": "Lesson Plan",
+    "name": "Translation",
     "description": ""
   },
   "options": {
@@ -14,16 +14,12 @@
     "title": {
       "type": "string"
     },
-    "description": {
+    "body": {
       "type": "richtext"
     },
-    "author": {
-      "via": "lessonPlans",
-      "model": "author"
-    },
-    "price": {
-      "model": "price",
-      "via": "lessonPlans"
+    "language": {
+      "model": "translation-language",
+      "via": "translations"
     }
   }
 }
