--- a/api/translation/models/translation.settings.json
+++ b/api/translation/models/translation.settings.json
@@ -20,6 +20,16 @@
     "language": {
       "model": "translation-language",
       "via": "translations"
+    },
+    "link": {
+      "type": "string"
+    },
+    "author": {
+      "model": "author",
+      "via": "translations"
+    },
+    "description": {
+      "type": "text"
     }
   }
 }
