--- a/api/translation/models/translation.settings.json
+++ b/api/translation/models/translation.settings.json
@@ -30,6 +30,10 @@
     },
     "description": {
       "type": "text"
+    },
+    "transcription": {
+      "via": "translation",
+      "model": "transcription"
     }
   }
 }
