--- a/api/translation/documentation/1.0.0/translation.json
+++ b/api/translation/documentation/1.0.0/translation.json
@@ -650,6 +650,9 @@
               "translation": {
                 "type": "string"
               },
+              "originalText": {
+                "type": "string"
+              },
               "published_at": {
                 "type": "string"
               },
@@ -660,6 +663,9 @@
                 "type": "string"
               }
             }
+          },
+          "acknowledgement": {
+            "type": "string"
           },
           "published_at": {
             "type": "string",
@@ -688,6 +694,9 @@
             "type": "string"
           },
           "transcription": {
+            "type": "string"
+          },
+          "acknowledgement": {
             "type": "string"
           },
           "published_at": {
