--- a/api/translation/models/translation.settings.json
+++ b/api/translation/models/translation.settings.json
@@ -34,6 +34,9 @@
     "transcription": {
       "via": "translation",
       "model": "transcription"
+    },
+    "acknowledgement": {
+      "type": "text"
     }
   }
 }
