Make transcription title required.

--- a/api/translation/documentation/1.0.0/translation.json
+++ b/api/translation/documentation/1.0.0/translation.json
@@ -623,7 +623,8 @@
           },
           "transcription": {
             "required": [
-              "id"
+              "id",
+              "title"
             ],
             "properties": {
               "id": {
