--- a/api/translation/documentation/1.0.0/translation.json
+++ b/api/translation/documentation/1.0.0/translation.json
@@ -604,6 +604,9 @@
                   "type": "string"
                 }
               },
+              "acknowledgement": {
+                "type": "string"
+              },
               "published_at": {
                 "type": "string"
               },
@@ -671,6 +674,9 @@
                 "items": {
                   "type": "string"
                 }
+              },
+              "acknowledgement": {
+                "type": "string"
               },
               "published_at": {
                 "type": "string"
