--- a/api/translation/models/translation.settings.json
+++ b/api/translation/models/translation.settings.json
@@ -25,8 +25,8 @@
       "type": "string"
     },
     "author": {
-      "model": "author",
-      "via": "translations"
+      "via": "translations",
+      "model": "author"
     },
     "description": {
       "type": "text"
